# nuclear-fission-geant4-sim

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  note.md  nuclear-fission.cc
analysis/daq/: psd.py  scintillation_temporal_analysis.py
analysis/ground-truth-analysis/: decay_scheme_template.tex.j2  plot_decay_schemes.py  plot_decay_trees.py  plot_energy_spectra.py  plot_event_energy_budgets.py  plot_event_multiplicities.py  requirements.txt
data/20260428T023041/: events.csv
data/20260428T175623/: events.csv  hits.csv
data/20260428T175639/: events.csv  hits.csv
data/20260428T194930/: events.csv  hits.csv
data/20260429T045251/: events-truth.csv  truth-record.csv
data/20260429T045627/: events-truth.csv  hits.csv
data/20260429T050358/: events-truth.csv  hits.csv  truth-record.csv
data/20260429T055243/: events-truth.csv  hits.csv  truth-record.csv
data/20260430T051304/: events-truth.csv  hits.csv  truth-record.csv
data/20260430T052100/: events-truth.csv  hits.csv  truth-record.csv
data/20260503T233549/: events-truth.csv
data/20260504T001421/: hits.csv  truth-record.csv
doc/: architecture.md  changelog.txt  design.md  plan.md  theory.md
include/: Action.hh  CsvWriter.hh  DetectorConstruction.hh  EventAction.hh  EventRecord.hh  Physics.hh  RunAction.hh  ScintillatorSD.hh  SteppingAction.hh  TrackingAction.hh
src/: Action.cc  CsvWriter.cc  DetectorConstruction.cc  EventAction.cc  Generator.cc  Physics.cc  RunAction.cc  ScintillatorSD.cc  SteppingAction.cc  TrackingAction.cc
src/macros/: run.mac  vis.mac
